--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -13,4 +13,5 @@
 			font-size: 2.25em;
 			font-weight: _font(weight-bold);
 		}
-	}
+	
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/c3ff7337d4971f84b5cb555da/46eaaf8ad1ea51cb5eaa00d77.js");</script>
